Now compiling to the 'app' folder.

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 <body>
     <canvas id="the-universe"></canvas>
 
-    <script type="text/javascript" src="app.js" charset="utf-8"></script>
+    <script type="text/javascript" src="app/app.js" charset="utf-8"></script>
 </body>
 
 </html>
