Now using Pixi to draw stuff.

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <canvas id="the-universe"></canvas>
+    <div id="the-universe"></div>
 
     <script type="text/javascript" src="app/app.js" charset="utf-8"></script>
 </body>
